fix alignment problem with sidebar active category

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,7 @@ body {
 
 #sidebar li.active {
   background-color: #343a40;
+  align-items: center;
 }
 
 #sidebar a {
